fix: fixing overflow problem on TypesList component

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,8 @@ body {
 
   font-family: "Nunito", sans-serif;
   font-size: 16px;
+
+  background-color: #0C3348;
 }
 
 button {
